--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-
+  max-width: 900px;
 }
 
 .header {
@@ -50,4 +50,17 @@ body {
 
 .box {
 
+}
+
+.second-middle-field {
+    border: solid red;
+    
+}
+
+.trivia {
+     
+}
+
+script {
+   
 }
