--- a/style2.css
+++ b/style2.css
@@ -14,7 +14,7 @@ h1 {
 #question {
     width: 70%;
     padding: 30px;
-    border: 3px solid blue;
+    border: 3px solid black;
     background-color: royalblue;
     color: white;
     font-size: 28px;
@@ -26,7 +26,7 @@ h1 {
 ************* */
 
 #answer {
-    width: 50%;
+    width: 90%;
     margin: 10px auto;
     color: white;
     background-color: red;
@@ -45,8 +45,8 @@ h1 {
 }
 
 #answer ul li {
-    width: 40%;
-    height: 40px;
+    width: 48%;
+    height: 100px;
     background-color: black;
     padding-top: 15px;
     text-align: center;
